--- a/src/components/HoverBox.css
+++ b/src/components/HoverBox.css
@@ -1,30 +1,32 @@
 .hover-box-container {
-    position: fixed;
-    background-color: #fff;
-    padding: 4px 8px;
-    border: 1px solid #ccc;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 8px;
-  }
-  
-  .hover-box-container h3 {
-    font-family: verdana;
-  }
-  
-  .hover-box-container .circle-container {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .hover-box-container .circle-container .circle {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-  }
-  
+  position: fixed;
+  background-color: #fff;
+  padding: 4px 8px;
+  border: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 8px;
+}
+
+.hover-box-container h3 {
+  font-family: verdana;
+}
+
+.hover-box-container .circle-container {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 10px;
+}
+
+.hover-box-container .circle-container .circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  margin: 0 4px; /* Add margin property to create spacing */
+}
+
