--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+.slider-container {
+  width: 50%;
+  margin-left: 25%;
+  height: 80px;
+  background-color: #fff;
+  padding: 4px 8px;
+  border: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  border-radius: 8px;
+}
 .footer {
     position: fixed;
     background-color: #9db3d0;
