--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   width: 30%;
   margin-left: 35%;
   height: 80px;
-  background-color: #fff;
+  background-color: #101827;
   padding: 4px 8px;
   border: 1px solid #ccc;
   display: flex;
