--- a/src/components/YearSlider.css
+++ b/src/components/YearSlider.css
@@ -5,11 +5,12 @@
     margin: auto;
   }
   .example-thumb {
+    top: 10px;
     cursor: pointer;
     position: absolute;
     z-index: 100;
     background: #ffffff;
-    border: 5px solid #3774ff;
+    border: 10px solid #48546e;
     border-radius: 100%;
     display: block;
     box-shadow: 0 0 2px 0 rgb(0 0 0 / 44%);
@@ -22,8 +23,11 @@
     background: #ddd;
   }
   .horizontal-slider .example-track {
-    top: 20px;
-    height: 4px;
+    position: absolute;
+    top: 19px;
+    height: 15px;
+    background: #f0f4ff;
+    border-radius: 3px;
   }
   .horizontal-slider .example-thumb {
     top: 12px;
@@ -56,17 +60,22 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border: 1px solid black;
-    padding: 10px 50px;
+    /* border: 1px solid black; */
+    padding: 0px 50px;
   }
 
   .slider-year-info-box-element1 {
-    margin-bottom: 10px;
     font-weight: bold;
-    font-size: 16px;
+    color: #ffffff;
+    font-size: 32px;
   }
 
 
-  .slider-year-info-box-element1 {
-    margin-bottom: 10px;
+  .slider-year-info-box-element2 {
+    padding: 5px 15px;
+    font-size: 24px;
+    color: #ffffff;
+    border: 1px solid #374151;
+    background: #374151;
+    border-radius: 25px;
   }
