--- a/src/components/ToggleButton.css
+++ b/src/components/ToggleButton.css
@@ -1,4 +1,16 @@
 .wrapper {
     display: flex;
+    width: 100%;
+    height: 100%;
     flex-direction: row;
+    border: 1px solid black;
+    background-color: #101827;
+}
+
+.wrapper .text {
+    flex: 1;
+    color: white;
+    text-align: center;
+    vertical-align: middle;
+    border: 1px solid white;
 }
