--- a/src/components/ToggleButton.css
+++ b/src/components/ToggleButton.css
@@ -3,14 +3,11 @@
     width: 100%;
     height: 100%;
     flex-direction: row;
-    border: 1px solid black;
-    background-color: #101827;
 }
 
 .wrapper .text-box {
     flex: 1;
-    color: white;
-    border: 1px solid white;
+    color: grey;
     text-align: center; /* This aligns the text horizontally*/
     display: flex;
     align-items: center;
@@ -19,8 +16,9 @@
 .wrapper .text-box-active {
     flex: 1;
     color: white;
-    background-color: darkgrey;
+    background-color: #374151;
     border: 1px solid white;
+    border-radius: 25px;
     text-align: center; /* This aligns the text horizontally*/
     display: flex;
     align-items: center;
