fix text select on toggle slider

--- a/src/components/ToggleButton.css
+++ b/src/components/ToggleButton.css
@@ -26,9 +26,15 @@
 
 .wrapper .text-box .text{
     flex: auto;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 
 .wrapper .text-box-active .text{
     flex: auto;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
