--- a/src/components/HoverBox.css
+++ b/src/components/HoverBox.css
@@ -42,7 +42,6 @@
   justify-content: center;
   color: #fff;
   margin: 0 4px;
-  color: #000;
   font-weight: bold;
   font-size: 16px;
 }
@@ -62,14 +61,27 @@
 
 .hover-box-container .money-wrapper .money {
   width: 70px;
-  height: 70px;
+  height: 50px;
   border-radius: 15%;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
   margin: 0 4px;
-  color: #000;
   font-weight: bold;
   font-size: 16px;
 }
+
+.hover-box-container .money-wrapper .annotate {
+  display: flex;
+  width: 70px;
+  height: 20px;
+}
+
+.hover-box-container .money-wrapper .annotate .text {
+  flex: 1 ;
+  color: #fff;
+  background-color: #374151;
+  border-radius: 15%;
+}
+
