--- a/src/components/YearSlider.css
+++ b/src/components/YearSlider.css
@@ -75,7 +75,7 @@
     padding: 5px 15px;
     font-size: 24px;
     color: #ffffff;
-    border: 1px solid #374151;
+    border: 1px solid white;
     background: #374151;
     border-radius: 25px;
   }
