--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 .app {
   background-color: #93B6C9;
-  height: 100vh;
-  width: 100vw;
+  height: 97vh;
+  width: 99vw;
+  display: flexbox;
 }
 
 .map {
-
+  height: 10%;
+  width: auto;
 }
 
 .slider-container {
@@ -39,12 +41,12 @@
   flex: 1
 }
 .footer {
-    position: fixed;
-    background-color: #9db3d0;
-    padding: 4px 8px;
-    border: 1px solid #38383e;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%
-  }
+  position: fixed;
+  background-color: #9db3d0;
+  padding: 4px 8px;
+  border: 1px solid #38383e;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%
+}
