--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
   width: 140px;
   height: 40px;
   top:10%;
-  left: 89%;
+  right: 20px;
   position: absolute;
   background-color: #101827;
   border: 5px solid #101827;
@@ -49,4 +49,24 @@
   flex-direction: column;
   align-items: center;
   width: 100%
+}
+
+.zoom {
+  display: flex;
+  position: absolute;
+  top: 20%;
+  right: 20px;
+  height: 40px;
+  width: 80px;
+  background-color: #101827;
+  border-radius: 10px;
+}
+
+.zoom .button {
+  flex: 1;
+  margin: 5%;
+  color: white;
+  font-weight: bolder;
+  background-color: #374151;
+  border-radius: 10px;
 }
