--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 .toggle {
   width: 140px;
   height: 40px;
-  top:10%;
+  top:100px;
   right: 20px;
   position: absolute;
   background-color: #101827;
@@ -54,7 +54,7 @@
 .zoom {
   display: flex;
   position: absolute;
-  top: 20%;
+  top: 180px;
   right: 20px;
   height: 40px;
   width: 80px;
