--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,19 @@
   display: flexbox;
 }
 
+.header {
+  position: fixed;
+  height: 30px;
+  width: 100%;
+  background-color: #9db3d0;
+  padding: 4px 8px;
+  border: 1px solid #38383e;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
 .map {
   height: 10%;
   width: auto;
@@ -40,6 +53,7 @@
   color: #ffffff;
   flex: 1
 }
+
 .footer {
   position: fixed;
   background-color: #9db3d0;
