--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,25 @@
   position: fixed;
   height: 30px;
   width: 100%;
-  background-color: #9db3d0;
+  background-color: #101827;
   padding: 4px 8px;
   border: 1px solid #38383e;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
 
+}
+
+.header .title {
+  flex: auto;
+  color: #ffffff;
+  font-weight: bold;
+  text-align: center;
+}
+
+.header .logo {
+  height: 25px;
+  width: 25px;
 }
 
 .map {
