adjust styling of toggle

--- a/src/components/ToggleButton.css
+++ b/src/components/ToggleButton.css
@@ -22,6 +22,8 @@
     text-align: center; /* This aligns the text horizontally*/
     display: flex;
     align-items: center;
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+
 }
 
 .wrapper .text-box .text{
