--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@
   top:100px;
   right: 20px;
   position: absolute;
-  background-color: #101827;
+  background-color: #242e41;
   border: 5px solid #101827;
   border-radius: 25px;
 }
