--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   height: 30px;
   width: 99vw;
   background-color: #101827;
+  padding: 5px 5px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -23,8 +24,8 @@
 }
 
 .header .logo {
-  height: 25px;
-  width: 25px;
+  height: 30px;
+  width: 30px;
 }
 
 .map {
