--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,8 @@
 
 .footer {
   position: fixed;
-  background-color: #9db3d0;
+  background-color: #101827;
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
