--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -12,9 +12,11 @@
     position: absolute;
     top: 55%;
     width: 20px;
-    height: 200px;
+    height: 150px;
     background: #101827;
     border-radius: 0px 15px 15px 0px;
     border: solid 5px black;
     border-left: 0px;
+    color: white;
+    font-weight: bolder;
 }
