--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -7,6 +7,7 @@
     border-left: 0px;
     border-radius: 0px 25px;
     display: flex;
+    flex-direction: column;
 }
 
 .sideBar .button {
@@ -23,7 +24,15 @@
 }
 
 .sideBar .panel .title {
-    flex: 1;
     color: white;
-    background-color: aqua;
+    width: 100%;
+    height: 40px;;
+    text-align: center;
+    overflow:hidden;
+    font-size: 2em;
+    background: aqua;
+}
+
+.sideBar .panel .content {
+
 }
