--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -38,6 +38,7 @@
     display: flex;
     justify-content: space-evenly;
     margin-top: 10px;
+    background: pink;
   }
   
   .sideBar .panel .colorcoded-wrapper .circle-wrapper {
@@ -54,6 +55,7 @@
   }
   
   .sideBar .panel .colorcoded-wrapper .circle-wrapper .circle {
+    flex: 1;
     width: 70px;
     height: 70px;
     border-radius: 50%;
@@ -109,6 +111,10 @@
     color: #ffffff;
   }
 
-.sideBar .panel .content {
+.sideBar .panel .barPlot {
+    background: purple;
+}
 
+.sideBar .panel .timeSeries {
+    background: greenyellow;
 }
