--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,21 @@
   margin: 5px 5px;
 }
 
+.header .settings {
+  height: 30px;
+  width: 30px;
+  margin: 4px;
+  padding: 1px;
+  background-color: #242e41;
+  border-radius: 5px;
+}
+
+.header .settings-icon {
+  vertical-align: middle  ;
+  height: 20px;
+  width: 20px;
+}
+
 .map {
   height: 10%;
   width: auto;
