--- a/src/components/Settings.css
+++ b/src/components/Settings.css
@@ -1,7 +1,8 @@
 .settings {
     position: fixed;
-    top: 84%;
-    width: 500px;
+    top: 40px;
+    right: 1%;
+    width: 200px;
     height: 60px;
     margin-left: 35%;
     background-color: #101827;
