--- a/src/components/SideBarImports.css
+++ b/src/components/SideBarImports.css
@@ -108,7 +108,13 @@
     margin-top: 4px;
     text-align: center;
     color: #ffffff;
-    
+  }
+
+  .sideBar .panel .barPlot-title {
+    color: white;
+    text-align: center;
+    text-decoration: underline;
+
   }
 
 .sideBar .panel .barPlot {
