add space between colo-coded viz and barplot title

--- a/src/components/SideBarImports.css
+++ b/src/components/SideBarImports.css
@@ -114,7 +114,7 @@
     color: white;
     text-align: center;
     text-decoration: underline;
-
+    white-space: pre-line;
   }
 
 .sideBar .panel .barPlot {
