feat: Add border radius to PopUp box

--- a/src/components/PopUp.css
+++ b/src/components/PopUp.css
@@ -1,6 +1,7 @@
 .popup-container {
     background-color: #101827;
     border: 1px solid #ccc;
+    border-radius: 10px;
     height: 500px;
     width: 500px;
     position: absolute;
