--- a/src/components/PopUp.css
+++ b/src/components/PopUp.css
@@ -3,7 +3,6 @@
     border: 1px solid #ccc;
     border-radius: 10px;
     height: 500px;
-    width: 500px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -12,5 +11,6 @@
 
 .impressum {
     color: white;
+    border: no;
 }
 
