--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,9 @@
 
 .slider-container {
   position: fixed;
-  left: 0%;
-  top: 84%;
+  left: 50%;
+  transform: translate(-50%);
+  bottom: 5vh;
   width: 95vw;
   max-width: 500px;
   height: 60px;
