--- a/src/App.css
+++ b/src/App.css
@@ -68,8 +68,8 @@
 .toggle {
   width: 140px;
   height: 40px;
-  top:100px;
-  right: 20px;
+  top: 50px;
+  right: 1vw;
   position: absolute;
   background-color: #242e41;
   border: 5px solid #101827;
@@ -118,12 +118,12 @@
 .zoom {
   display: flex;
   position: absolute;
-  top: 180px;
-  right: 20px;
+  top: 110px;
+  right: 1vw;
   height: 40px;
   width: 80px;
   background-color: #101827;
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 .zoom .button {
