--- a/src/components/YearSlider.css
+++ b/src/components/YearSlider.css
@@ -1,20 +1,11 @@
   .horizontal-slider {
     width: 100%;
     max-width: 800px;
-    height: 4vh;
+    height: 50%;
     margin: auto;
+    bottom: -6px;
   }
-  .example-thumb {
-    top: 10px;
-    cursor: pointer;
-    position: absolute;
-    z-index: 100;
-    background: #ffffff;
-    border: 10px solid #48546e;
-    border-radius: 100%;
-    display: block;
-    box-shadow: 0 0 2px 0 rgb(0 0 0 / 44%);
-  }
+  
   .example-thumb.active {
     background-color: grey;
   }
@@ -25,20 +16,28 @@
   .horizontal-slider .example-track {
     position: absolute;
     top: 4.5px;
-    height: 15px;
+    height: 10px;
     background: #f0f4ff;
     border-radius: 3px;
   }
   .horizontal-slider .example-thumb {
-    top: -4px;
-    width: 10px;
+    top: -2px;
+    width: 3px;
     outline: none;
     height: 10px;
     line-height: 38px;
+    cursor: pointer;
+    background: #ffffff;
+    border-width: 6px 5px 6px 5px;
+    border-color: #48546e;
+    border-style: solid;
+    border-radius: 10%;
+    display: block;
+    box-shadow: 0 0 2px 0 rgb(0 0 0 / 44%);
   }
   .example-mark {
-    width: 8px;
-    height: 8px;
+    width: 6px;
+    height: 6px;
     border: 2px solid rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
     cursor: pointer;
@@ -58,6 +57,7 @@
 
   .slider-year-info-box {
     display: flex;
+    height: 50%;
     flex-direction: row;
     justify-content: space-between;
     padding: 0px 50px;
@@ -66,15 +66,17 @@
   .slider-year-info-box-element1 {
     font-weight: bold;
     color: #ffffff;
-    font-size: 26px;
+    font-size: 20px;
   }
 
 
   .slider-year-info-box-element2 {
     padding: 5px 15px;
-    font-size: 20px;
+    font-size: 15px;
+    line-height: 60%;
     color: #ffffff;
     border: 1px solid white;
     background: #374151;
     border-radius: 25px;
+    text-align: center;
   }
